[gd_scene load_steps=16 format=2]

[ext_resource path="res://home/avatar_david.tres" type="Texture" id=4]
[ext_resource path="res://assets/theme/fonts/body_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/design/truckhunt_kv.png" type="Texture" id=6]
[ext_resource path="res://home/PregameSetup.gd" type="Script" id=8]
[ext_resource path="res://assets/theme/main_theme.tres" type="Theme" id=10]
[ext_resource path="res://assets/theme/fonts/black_80_slanted.tres" type="DynamicFont" id=11]
[ext_resource path="res://common/shaders/desaturate_texture.gdshader" type="Shader" id=12]
[ext_resource path="res://home/PlayerBox.gd" type="Script" id=13]
[ext_resource path="res://home/BoxContainer.gd" type="Script" id=14]

[sub_resource type="ShaderMaterial" id=824]
shader = ExtResource( 12 )
shader_param/saturation = 1.0

[sub_resource type="Gradient" id=815]
colors = PoolColorArray( 0, 0, 0, 1, 0, 0, 0, 0.584314 )

[sub_resource type="GradientTexture2D" id=816]
gradient = SubResource( 815 )
fill_from = Vector2( 0.4875, 1 )
fill_to = Vector2( 0.470833, 0 )

[sub_resource type="StyleBoxFlat" id=826]

[sub_resource type="StyleBoxFlat" id=827]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 1, 0, 1 )
expand_margin_left = 24.0
expand_margin_right = 24.0

[sub_resource type="StyleBoxFlat" id=821]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
expand_margin_left = 24.0
expand_margin_right = 24.0

[node name="PregameSetup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
theme = ExtResource( 10 )
script = ExtResource( 8 )

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource( 824 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -4056.0
margin_top = -1960.0
margin_right = -4056.0
margin_bottom = -1960.0
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 6 )
expand = true

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.67451 )

[node name="Grad" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.756863 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 816 )
expand = true
flip_v = true

[node name="Label" type="Label" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.52549 )
margin_left = 1086.0
margin_top = 249.0
margin_right = 1451.0
margin_bottom = 344.0
grow_horizontal = 0
custom_fonts/font = ExtResource( 11 )
text = "Drivers"
uppercase = true

[node name="BoxContainer" type="VFlowContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -1581.0
margin_top = -614.0
margin_right = -141.0
margin_bottom = 596.0
script = ExtResource( 14 )
__meta__ = {
"_edit_group_": true
}

[node name="PlayerBox" type="Control" parent="BoxContainer"]
margin_right = 1440.0
margin_bottom = 1210.0
rect_min_size = Vector2( 1440, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 13 )

[node name="Undi" type="ColorRect" parent="BoxContainer/PlayerBox"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.862745 )

[node name="Hover" type="Panel" parent="BoxContainer/PlayerBox"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Content" type="VBoxContainer" parent="BoxContainer/PlayerBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -5.0
margin_top = 158.0
margin_right = -2.0
margin_bottom = -137.0

[node name="Properties" type="VFlowContainer" parent="BoxContainer/PlayerBox/Content"]
margin_left = 425.0
margin_right = 1018.0
margin_bottom = 863.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 3
custom_constants/vseparation = 48
custom_constants/hseparation = 48

[node name="Avatar" type="TextureRect" parent="BoxContainer/PlayerBox/Content/Properties"]
margin_right = 593.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
texture = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="BoxContainer/PlayerBox/Content/Properties"]
margin_top = 176.0
margin_right = 593.0
margin_bottom = 304.0
rect_min_size = Vector2( 128, 128 )

[node name="Bolts" type="HBoxContainer" parent="BoxContainer/PlayerBox/Content/Properties"]
margin_top = 352.0
margin_right = 593.0
margin_bottom = 400.0

[node name="Label" type="Label" parent="BoxContainer/PlayerBox/Content/Properties/Bolts"]
margin_top = 4.0
margin_right = 134.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 5 )
text = "Bolt type"

[node name="Types" type="HBoxContainer" parent="BoxContainer/PlayerBox/Content/Properties/Bolts"]
margin_left = 138.0
margin_right = 586.0
margin_bottom = 48.0
custom_constants/separation = 32
__meta__ = {
"_edit_group_": true
}

[node name="Bolt" type="Button" parent="BoxContainer/PlayerBox/Content/Properties/Bolts/Types"]
margin_right = 88.0
margin_bottom = 48.0
custom_colors/font_color_disabled = Color( 0.976471, 0.172549, 0, 1 )
toggle_mode = true
text = "YYY"

[node name="Bolt2" type="Button" parent="BoxContainer/PlayerBox/Content/Properties/Bolts/Types"]
margin_left = 120.0
margin_right = 208.0
margin_bottom = 48.0
custom_colors/font_color_disabled = Color( 0.976471, 0.172549, 0, 1 )
toggle_mode = true
text = "YYY"

[node name="Bolt3" type="Button" parent="BoxContainer/PlayerBox/Content/Properties/Bolts/Types"]
margin_left = 240.0
margin_right = 328.0
margin_bottom = 48.0
custom_colors/font_color_disabled = Color( 0.976471, 0.172549, 0, 1 )
toggle_mode = true
text = "YYY"

[node name="Bolt4" type="Button" parent="BoxContainer/PlayerBox/Content/Properties/Bolts/Types"]
margin_left = 360.0
margin_right = 448.0
margin_bottom = 48.0
custom_colors/font_color_disabled = Color( 0.976471, 0.172549, 0, 1 )
toggle_mode = true
text = "YYY"

[node name="Controllers" type="HBoxContainer" parent="BoxContainer/PlayerBox/Content/Properties"]
margin_top = 448.0
margin_right = 593.0
margin_bottom = 496.0

[node name="Label" type="Label" parent="BoxContainer/PlayerBox/Content/Properties/Controllers"]
margin_top = 4.0
margin_right = 149.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 5 )
text = "Controller"

[node name="Types" type="HBoxContainer" parent="BoxContainer/PlayerBox/Content/Properties/Controllers"]
margin_left = 153.0
margin_right = 593.0
margin_bottom = 48.0
custom_constants/separation = 32
__meta__ = {
"_edit_group_": true
}

[node name="Controller" type="Button" parent="BoxContainer/PlayerBox/Content/Properties/Controllers/Types"]
margin_right = 86.0
margin_bottom = 48.0
custom_colors/font_color_disabled = Color( 0.976471, 0.172549, 0, 1 )
toggle_mode = true
text = "XXX"

[node name="Controller2" type="Button" parent="BoxContainer/PlayerBox/Content/Properties/Controllers/Types"]
margin_left = 118.0
margin_right = 204.0
margin_bottom = 48.0
custom_colors/font_color_disabled = Color( 0.976471, 0.172549, 0, 1 )
toggle_mode = true
text = "XXX"

[node name="Controller3" type="Button" parent="BoxContainer/PlayerBox/Content/Properties/Controllers/Types"]
margin_left = 236.0
margin_right = 322.0
margin_bottom = 48.0
custom_colors/font_color_disabled = Color( 0.976471, 0.172549, 0, 1 )
toggle_mode = true
text = "XXX"

[node name="Controller4" type="Button" parent="BoxContainer/PlayerBox/Content/Properties/Controllers/Types"]
margin_left = 354.0
margin_right = 440.0
margin_bottom = 48.0
custom_colors/font_color_disabled = Color( 0.976471, 0.172549, 0, 1 )
toggle_mode = true
text = "XXX"

[node name="LineEdit" type="LineEdit" parent="BoxContainer/PlayerBox/Content/Properties"]
margin_top = 544.0
margin_right = 593.0
margin_bottom = 587.0
focus_neighbour_bottom = NodePath("../../Menu/RemoveBtn")
custom_styles/read_only = SubResource( 826 )
custom_styles/focus = SubResource( 827 )
custom_styles/normal = SubResource( 821 )
text = "HASSELHOFF"
align = 1
max_length = 10
virtual_keyboard_type = 1

[node name="Menu" type="HBoxContainer" parent="BoxContainer/PlayerBox/Content"]
margin_top = 867.0
margin_right = 1443.0
margin_bottom = 915.0
custom_constants/separation = 64
alignment = 1
__meta__ = {
"_edit_group_": true
}

[node name="TransformBtn" type="Button" parent="BoxContainer/PlayerBox/Content/Menu"]
margin_left = 444.0
margin_right = 748.0
margin_bottom = 48.0
focus_neighbour_top = NodePath("../../Properties/LineEdit")
text = "MAKE HUMAN"

[node name="RemoveBtn" type="Button" parent="BoxContainer/PlayerBox/Content/Menu"]
margin_left = 812.0
margin_right = 998.0
margin_bottom = 48.0
focus_neighbour_top = NodePath("../../Properties/LineEdit")
text = "REMOVE"

[node name="MenuBox" type="CenterContainer" parent="."]
margin_left = 131.0
margin_top = 867.0
margin_right = 725.0
margin_bottom = 1280.0
__meta__ = {
"_edit_group_": true
}

[node name="Undi" type="ColorRect" parent="MenuBox"]
margin_left = 297.0
margin_top = 206.0
margin_right = 297.0
margin_bottom = 206.0
color = Color( 0, 0, 0, 0.862745 )

[node name="Hover" type="Panel" parent="MenuBox"]
visible = false
margin_left = 297.0
margin_top = 206.0
margin_right = 297.0
margin_bottom = 206.0

[node name="Menu" type="VBoxContainer" parent="MenuBox"]
margin_left = 146.0
margin_top = 79.0
margin_right = 447.0
margin_bottom = 334.0
custom_constants/separation = 32
__meta__ = {
"_edit_group_": true
}

[node name="PlayBtn" type="Button" parent="MenuBox/Menu"]
margin_right = 301.0
margin_bottom = 95.0
focus_neighbour_left = NodePath("../CancelBtn")
custom_colors/icon_color_focus = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 11 )
text = "PLAY"
align = 0

[node name="AddBtn" type="Button" parent="MenuBox/Menu"]
margin_top = 127.0
margin_right = 301.0
margin_bottom = 175.0
text = "+ ADD PLAYER"

[node name="CancelBtn" type="Button" parent="MenuBox/Menu"]
margin_top = 207.0
margin_right = 301.0
margin_bottom = 255.0
focus_neighbour_right = NodePath("../PlayBtn")
text = "CANCEL"
align = 0

[connection signal="text_changed" from="BoxContainer/PlayerBox/Content/Properties/LineEdit" to="BoxContainer/PlayerBox" method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="BoxContainer/PlayerBox/Content/Menu/TransformBtn" to="BoxContainer/PlayerBox" method="_on_TransformBtn_pressed"]
[connection signal="mouse_entered" from="MenuBox" to="MenuBox" method="_on_PlayerBox_mouse_entered"]
[connection signal="mouse_exited" from="MenuBox" to="MenuBox" method="_on_PlayerBox_mouse_exited"]
[connection signal="pressed" from="MenuBox/Menu/PlayBtn" to="." method="_on_PlayBtn_pressed"]
[connection signal="pressed" from="MenuBox/Menu/AddBtn" to="." method="_on_AddBtn_pressed"]
[connection signal="pressed" from="MenuBox/Menu/CancelBtn" to="." method="_on_CancelBtn_pressed"]
